# student-sim

./: .env.production  .gitignore  .vercelignore  CLAUDE.md  CONTRACT.md  README.md  WhatItIs.md  build-ui.workflow.js  file.md  go-through-the-entire-misty-lynx.md  new-report-section-prompt.md  persona-integration-prompt.md  persona-profiles.md  requirements.md  suggesstion.md  vercel.json
client/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
course-info-extracted/: bitsom--ai-ds.md  bitsom--ai-leadership-dm.md  bitsom--ba-dm.md  bitsom--bitsom-digital-marketing.md  bitsom--business-analytics.md  bitsom--digital-marketing.md  bitsom--fintech-ai.md  bitsom--pgp.md  bitsom--pm-gen-ai-global.md  bitsom--pm-gen-ai.md  bitsom--product-management.md  fitt-iit-delhi--entrepreneurship.md  iim-mumbai--ai-bi-global.md  iim-mumbai--ai-bi.md  iim-mumbai--digital-marketing.md  iim-mumbai--entrepreneurship.md  iim-mumbai--gen-ai-business-decision-making-cohort-dp.md  iim-mumbai--gen-ai-business-decision-making-global.md  iim-mumbai--gen-ai-business-decision-making.md  iim-mumbai--gen-ai.md  iim-mumbai--scm.md  iim-ranchi--business-analytics-ai.md  iim-ranchi--digital-marketing.md  iim-ranchi--executive-product-management.md  iim-ranchi--product-management.md  iim-rohtak--digital-marketing.md  iim-rohtak--product-management.md  iim-sirmaur--digital-marketing.md  iim-sirmaur--edge.md  iim-trichy--digital-marketing.md  iim-trichy--fintech-ai.md  iim-trichy--product-management.md  iit-guwahati--ds.md  iit-mandi--ai-ds.md  iit-mandi--cse.md  iit-mandi--cyber-security.md  iit-mandi--embedded-system.md  iit-mandi--nlp-ai-ml.md  iit-patna--ai-engineering.md  iit-patna--ai-ml-hindi.md  (+43 more)
docs/: bug-loop-log.md  counsellor-playbook.md  replatform-plan.md  sample-system-prompt.txt
scripts/: backfill-reports-edge.mjs  build-lead-profiles.mjs  import-courses.mjs  (+11 more)
voice-server/: .gitignore  README.md  capabilities.py  main.py  pyproject.toml  run.sh  smoke.py  test_helpers.py
(+239 files in other folders)
