[project]
name = "voice-server"
version = "0.1.0"
description = "Voice sidecar: TTS, STT, and prosody analysis for the counselling trainer"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "soundfile>=0.12",
    "librosa>=0.10",
    "faster-whisper>=1.0",
    # chatterbox-tts: installs successfully on Apple Silicon M2 (torch 2.6, Python 3.11).
    # If resolution fails on your machine, comment it out; kokoro-onnx is the automatic fallback.
    "chatterbox-tts>=0.1",
    "kokoro-onnx>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
